fix removes top banner on mobile

--- a/_sass/20_app.scss
+++ b/_sass/20_app.scss
@@ -131,6 +131,10 @@ img.main-logo {
 [position]>span {
   position: relative;
   z-index: inherit;
+  padding: inherit;
+  display: none;
 }
+
+
 
 }
